alignment of items moved to correctlocation post external bar

--- a/public/css/external.css
+++ b/public/css/external.css
@@ -11,7 +11,7 @@
   font-weight: bold;  
   font-size: 0.8em;  
   /* display: inline-block;  */
-  margin: .8vh 4.7vw .8vh;
+  margin: .4vh 4.7vw .4vh;
   padding: 0.4px 9px 0 9px;  
   box-shadow:0 1px 0 rgba(255, 255, 255, .5) inset, 0 -1px 0 rgba(255, 255, 255, .1) inset, 0 4px 0 #338A94, 0 4px 2px rgba(0, 0, 0, .5);  
   outline: 0;   
