--- a/public/css/startmenu.css
+++ b/public/css/startmenu.css
@@ -11,8 +11,9 @@
 #clock{
   position: absolute;
   white-space: nowrap;
-  right: .3vw;
-  bottom: 1.5vh;
-  font-size: 14px;
-  font-family: Arial, Helvetica, sans-serif;
+  right: .4vw;
+  bottom: 4.45vh;
+  font-size: 12px;
+  font-family: Tahoma, Arial, Helvetica, sans-serif;
+  font-weight: bold;
 }
